tests/ui/lang/core/ref/zst_member_ref_arg-broken.stderr
error: cannot cast between pointer types
       from `*struct (usize, usize) { u32, u32 }`
         to `*struct B {  }`
  --> $DIR/zst_member_ref_arg-broken.rs:33:5
   |
33 |     f(&s.y);
   |     ^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:33:5
   |
33 |     f(&s.y);
   |     ^
note: called by `main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:31:1
   |
31 | #[spirv(fragment)]
   | ^

error: cannot cast between pointer types
       from `*u32`
         to `*struct B {  }`
  --> $DIR/zst_member_ref_arg-broken.rs:23:5
   |
23 |     f(&s.y);
   |     ^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:23:5
   |
23 |     f(&s.y);
   |     ^
note: called by `main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:21:1
   |
21 | #[spirv(fragment)]
   | ^

error: cannot cast between pointer types
       from `*struct S<usize, usize> { u32, u32 }`
         to `*struct B {  }`
  --> $DIR/zst_member_ref_arg-broken.rs:28:5
   |
28 |     f(&s.y);
   |     ^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:28:5
   |
28 |     f(&s.y);
   |     ^
note: called by `main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:26:1
   |
26 | #[spirv(fragment)]
   | ^

error: aborting due to 3 previous errors

